test/libsolidity/syntaxTests/nameAndTypeResolution/experimental_pragma_multiple_same_line.sol
pragma experimental unsupportedName unsupportedName;
// ----
// SyntaxError: (0-52): Stray arguments.
